To List does not shnag the existed code and it guarntee to generate unique HireachyIds

--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>Frm_UnifiedCode_Show.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\FakeIDsGenerator\FakeIdGenrator.cs" />
+    <Compile Include="Helper\GuidIntGenerator.cs" />
     <Compile Include="Helper\Helper.cs" />
     <Compile Include="Models\BOQs.cs">
       <DependentUpon>Entities.tt</DependentUpon>
