--- a/UnitTestProject1/PSC Cost Control Unit Testings.csproj
+++ b/UnitTestProject1/PSC Cost Control Unit Testings.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelpersUnitTestings\FakeIdsGeneratorUnitTestings.cs" />
+    <Compile Include="HelpersUnitTestings\GuidIntGenratorUnitTestings.cs" />
     <Compile Include="HelpersUnitTestings\TreeListHandlerUnitTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServicesBuilder\ServiceBuilderUnitTestings.cs" />
