--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -241,6 +241,8 @@
     <Compile Include="Trackers\Commiters\NonHireaichalUpdatingCommitter.cs" />
     <Compile Include="Trackers\PersistantCruds\IHirechicalPersistent.cs" />
     <Compile Include="Trackers\PersistantCruds\IPersistent.cs" />
+    <Compile Include="Trackers\Reducers\IReducer.cs" />
+    <Compile Include="Trackers\Reducers\Reducer.cs" />
     <Compile Include="Trackers\TrackingEntitiesFactory\ITracker.cs" />
     <Compile Include="Trackers\TrackingEntitiesFactory\Tracker.cs" />
     <Compile Include="Forms\Project Code\Frm_Categories_ProjectCode.cs">
