--- a/UnitTestProject1/PSC Cost Control Unit Testings.csproj
+++ b/UnitTestProject1/PSC Cost Control Unit Testings.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServicesBuilder\ServiceBuilderUnitTestings.cs" />
     <Compile Include="Tracker\HireaichalUpdatingCommitterUnitTestings.cs" />
+    <Compile Include="Tracker\ReducerUnitTestings.cs" />
     <Compile Include="Tracker\TrackerUnitTestings.cs" />
   </ItemGroup>
   <ItemGroup>
