--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -104,6 +104,12 @@
     <Compile Include="Forms\Items Registeration\Frm_ItemsRegisterationBOQItems.Designer.cs">
       <DependentUpon>Frm_ItemsRegisterationBOQItems.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Project Code\Frm_ProjectCodeEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Project Code\Frm_ProjectCodeEdit.Designer.cs">
+      <DependentUpon>Frm_ProjectCodeEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Project Code\Frm_ProjectCodeCopy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,12 @@
     </Compile>
     <Compile Include="Forms\Unified Code\Frm_Categories_UnifiedCode.Designer.cs">
       <DependentUpon>Frm_Categories_UnifiedCode.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Unified Code\Frm_UnifiedCodeEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Unified Code\Frm_UnifiedCodeEdit.Designer.cs">
+      <DependentUpon>Frm_UnifiedCodeEdit.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Unified Code\Frm_UnifiedCode_Show.cs">
       <SubType>Form</SubType>
@@ -298,6 +310,9 @@
     <EmbeddedResource Include="Forms\Items Registeration\Frm_ItemsRegisterationBOQItems.resx">
       <DependentUpon>Frm_ItemsRegisterationBOQItems.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Project Code\Frm_ProjectCodeEdit.resx">
+      <DependentUpon>Frm_ProjectCodeEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Project Code\Frm_ProjectCodeCopy.resx">
       <DependentUpon>Frm_ProjectCodeCopy.cs</DependentUpon>
     </EmbeddedResource>
@@ -309,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Project Code\Frm_Categories_ProjectCode.resx">
       <DependentUpon>Frm_Categories_ProjectCode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Unified Code\Frm_UnifiedCodeEdit.resx">
+      <DependentUpon>Frm_UnifiedCodeEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Unified Code\Frm_UnifiedCode_Show.resx">
       <DependentUpon>Frm_UnifiedCode_Show.cs</DependentUpon>
